# uep_rag_assistant

./: .gitignore  README.md  pyproject.toml
src/api/: main.py
src/config/: settings.py
src/retrieval/: llm_client.py
src/retrieval/llm/: base.py  factory.py  fallback_client.py  gemini.py  gemini_async.py  gemini_client.py  openai_client.py
